# Data_Pipeline_AI

./: .gitignore  Dockerfile  README.md  app.py  flight_prices_app.py  flights-test.db  forex_converter.py  pyproject.toml  t.py
ai_assistant/: assistant copy.py  assistant.py  assistant2.py  store_and_transform.py  utils.py
data/: flights.csv  flights.html
flights_dbt/: dbt_project.yml
flights_dbt/models/: bronze_flights.sql  gold_flights_byDay.sql  gold_flights_byMonth.sql  gold_flights_byPopRoutes.sql  gold_flights_byWeekDay.sql  silver_flights.sql  sources.yml
flights_dbt/models/gold/: gold_flights_byDay.sql  gold_flights_byDaysAhead.sql  gold_flights_byMonth.sql  gold_flights_byWeekDay.sql  schema.yml
flights_dbt/models/silver/: silver_flights.sql
updatedb/: data_contract.py  database.py  flight_prices.py  load_sql.py  load_sql2.py  parser.py  secure.py  updatedb.py  webscraping.py  webscraping_BR.py
vector_db/: chroma.sqlite3
vector_db/fb7ef2fc-bf54-4aea-b4be-a1090f501e8c/: index_metadata.pickle
