[project]
name = "pipeline-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandera>=0.23.0",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
