[project]
name = "pipeline-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "currencyconverter>=0.18.3",
    "dbt-postgres>=1.9.0",
    "dotenv>=0.9.9",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandera>=0.23.0",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
