[project]
name = "pipeline-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "currencyconverter>=0.18.3",
    "dbt-postgres>=1.9.0",
    "dotenv>=0.9.9",
    "groq>=0.18.0",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "langchain[groq]>=0.3.20",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.5",
    "numpy==1.26.4",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pandera>=0.23.0",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.29.0",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
